infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team1-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: team1-prod
---
apiVersion: v1
kind: Namespace
metadata: 
  name: team1-gateway
